--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongoose": "^8.13.2",
     "nodemailer": "^6.10.0",
     "prompt-sync": "^4.2.0"
   },
